# Cpp-Template

./: README.md
NewProject_Template/src/: CMakeLists.txt  main.cpp
NewProject_TimedLoop_Template/: CMakeLists.txt
NewProject_TimedLoop_Template/src/: main.cpp
